[project]
name = "gallery-server"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # list your actual dependencies here, e.g.:
    # "flask>=3.0",
    # "fastapi>=0.110",
    # "uvicorn>=0.29",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.vercel]
entrypoint = "gallery_server:app"